--- a/views/carrito/carrito.html
+++ b/views/carrito/carrito.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../../css/main.css">
+    <meta name="description" content="Consultá aca tu carrito de compras">
+    <meta name="author" content="Marco Leskovar">
+    <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
+    <meta name="copyright" content="Gamma Distribuciones"/>
+    <meta name="robots" content="index, follow"/>
     <title>Carrito - Gamma Distribuciones</title>
 </head>
 <body>
@@ -44,7 +49,7 @@
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -133,8 +138,8 @@
             <ul class="main-carrito__section--ul">
                 <li class="main-carrito__section--ul--li first-carrito-li">
                     <a class="main-carrito__section--ul--li--a" href="#">
-                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto producto 1">
-                        <h2 class="main-carrito__section--ul--li--a--text">Caja tornillo p/a 8 x 9/16 zincado</h2>
+                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/fix-5x45.webp" alt="Producto 1">
+                        <h2 class="main-carrito__section--ul--li--a--text">Fix 5x45 (Dorado) - Granel</h2>
                     </a>
                     <div class="main-carrito__section--ul--li--delete">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
@@ -144,8 +149,8 @@
                 </li>
                 <li class="main-carrito__section--ul--li">
                     <a class="main-carrito__section--ul--li--a" href="#">
-                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto producto 2">
-                        <h2 class="main-carrito__section--ul--li--a--text">Caja tornillo hexagonal 14 x 2 zincado</h2>
+                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/t1-mecha-8x12.webp" alt="Producto 2">
+                        <h2 class="main-carrito__section--ul--li--a--text">T1 Mecha 8x1/2 (Zincado) - Granel</h2>
                     </a>
                     <div class="main-carrito__section--ul--li--delete">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
@@ -155,8 +160,8 @@
                 </li>
                 <li class="main-carrito__section--ul--li last-carrito-li">
                     <a class="main-carrito__section--ul--li--a" href="#">
-                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto producto 3">
-                        <h2 class="main-carrito__section--ul--li--a--text">Estuche tornillo parker 6 x 1</h2>
+                        <img class="main-carrito__section--ul--li--a--img" src="../../imagenes/hex-t2-14x2.webp" alt="Producto 3">
+                        <h2 class="main-carrito__section--ul--li--a--text">Hex T2 14x2 - Granel</h2>
                     </a>
                     <div class="main-carrito__section--ul--li--delete">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-trash-fill" viewBox="0 0 16 16">
