--- a/views/nosotros/nosotros.html
+++ b/views/nosotros/nosotros.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../../css/main.css">
+    <meta name="description" content="Conocé más sobre nosotros y nuestra historia">
+    <meta name="author" content="Marco Leskovar">
+    <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
+    <meta name="copyright" content="Gamma Distribuciones"/>
+    <meta name="robots" content="index, follow"/>
     <title>Nosotros - Gamma Distribuciones</title>
 </head>
 <body>
@@ -44,7 +49,7 @@
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -124,28 +129,25 @@
         <section class="main-nosotros__section col-12">
             <!-- ARTICLE-(nosotros)-1 = START -->
             <article class="main-nosotros__section--article art-nos-1 col-12 col-sm-12 col-md-12 col-lg-12">
-                <img class="main-nosotros__section--article--image col-12" src="../../imagenes/aboutus.png" alt="primera foto sobre nosotros">
+                <img class="main-nosotros__section--article--image col-12" src="../../imagenes/logo-foto.webp" alt="Nosotros foto 1">
                 <p class="main-nosotros__section--article--text col-12">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fugit debitis ipsa nam. 
-                    Nisi qui nam ipsum ratione sint nobis aliquid magnam exercitationem quae vel velit deleniti, nihil hic iure.
+                    En el año 2002 Juan Leskovar encaró el desafío de comenzar una distribuidora de tornillos autoperforantes. Inició su actividad Gamma Distribuciones como Distribuidor Oficial TEL. Hoy con más de 20 años de experiencia en los rubros de construcción y bulonería, seguimos adelante con el mismo empeño y convicción que en sus inicios.
                 </p>
             </article>
             <!-- ARTICLE-(nosotros)-1 = END -->
             <!-- ARTICLE-(nosotros)-2 = START -->
             <article class="main-nosotros__section--article art-nos-2 col-12 col-sm-12 col-md-12 col-lg-12">
-                <img class="main-nosotros__section--article--image col-12" src="../../imagenes/aboutus.png" alt="seguda foto sobre nosotros">
+                <img class="main-nosotros__section--article--image col-12" src="../../imagenes/deposito-gamma.webp" alt="Nosotros foto 2">
                 <p class="main-nosotros__section--article--text col-12">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fugit debitis ipsa nam. 
-                    Nisi qui nam ipsum ratione sint nobis aliquid magnam exercitationem quae vel velit deleniti, nihil hic iure.
+                 Contamos con un destacado equipo de personas dedicadas diariamente a plasmar los valores de la empresa: atención personalizada, dedicación y esmero, trato cordial, respeto y vocación por el servicio. Siempre con el la satisfacción del cliente en mente y el crecimiento y mejora constante como norte.
                 </p>
             </article>
             <!-- ARTICLE-(nosotros)-2 = END -->
             <!-- ARTICLE-(nosotros)-3 = START -->
             <article class="main-nosotros__section--article art-nos-3 col-12 col-sm-12 col-md-12 col-lg-12">
-                <img class="main-nosotros__section--article--image col-12" src="../../imagenes/aboutus.png" alt="tercera foto sobre nosotros">
+                <img class="main-nosotros__section--article--image col-12" src="../../imagenes/familia-leskovar.webp" alt="Nosotros foto 3">
                 <p class="main-nosotros__section--article--text col-12">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam fugit debitis ipsa nam. 
-                    Nisi qui nam ipsum ratione sint nobis aliquid magnam exercitationem quae vel velit deleniti, nihil hic iure.
+                    El fundador de Gamma Distribuciones; Juan Leskovar, es esposo, padre de cuatro hijos, estudiante de marketing y emprendedor que a sus 50 años mantiene intacta su pasión por llevar su empresa al avance y la mejora constante. Él encontró la forma de fusionar sus conocimientos en el área junto con su deseo de honrar valores que le son muy afectos: la responsabilidad, el compromiso, la palabra cumplida, el trato cercano y accesible, y la pasión por brindar soluciones.
                 </p>
             </article>
             <!-- ARTICLE-(nosotros)-3 = END -->
@@ -155,9 +157,9 @@
         <div class="main-nosotros__founders col-12">
             <!-- FIRST-PERSON-(nosotros) = START -->
             <div class="main-nosotros__founders--div col-12 col-md-3">
-                <img class="main-nosotros__founders--div--img" src="../../imagenes/fulano.jpg">
+                <img class="main-nosotros__founders--div--img" src="../../imagenes/juan-leskovar.webp" alt="Foto Fundador">
                 <h2 class="main-nosotros__founders--div--name">
-                    Pablito Clavo
+                    Juan Leskovar
                 </h2>
                 <h3 class="main-nosotros__founders--div--position">
                     Fundador
@@ -166,26 +168,15 @@
             <!-- FIRST-PERSON-(nosotros) = END -->
             <!-- SECOND-PERSON-(nosotros) = START -->
             <div class="main-nosotros__founders--div col-12 col-md-3">
-                <img class="main-nosotros__founders--div--img" src="../../imagenes/fulano.jpg">
+                <img class="main-nosotros__founders--div--img" src="../../imagenes/marco-leskovar.webp" alt="Foto Ventas">
                 <h2 class="main-nosotros__founders--div--name">
-                    Fulano Mengano
+                    Marco Leskovar
                 </h2>
                 <h3 class="main-nosotros__founders--div--position">
                     Ventas
                 </h3>
             </div>
             <!-- SECOND-PERSON-(nosotros) = END -->
-            <!-- THIRD-PERSON-(nosotros) = START -->
-            <div class="main-nosotros__founders--div col-12 col-md-3">
-                <img class="main-nosotros__founders--div--img" src="../../imagenes/fulano.jpg">
-                <h2 class="main-nosotros__founders--div--name">
-                    Mengano Fulano
-                </h2>
-                <h3 class="main-nosotros__founders--div--position">
-                    Cuentas
-                </h3>
-            </div>
-            <!-- THIRD-PERSON-(nosotros) = END -->
         </div>
         <!-- FUNDADORES-(nosotros) = END -->
     </main>
