--- a/views/novedades/novedades.html
+++ b/views/novedades/novedades.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../../css/main.css">
+    <meta name="description" content="Enterate de los ultimos lanzamientos y ofertas exclusivas">
+    <meta name="author" content="Marco Leskovar">
+    <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
+    <meta name="copyright" content="Gamma Distribuciones"/>
+    <meta name="robots" content="index, follow"/>
     <title>Novedades - Gamma Distribuciones</title>
 </head>
 <body>
@@ -44,7 +49,7 @@
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -133,10 +138,10 @@
             <ul class="main-novedades__section--ul">
                 <li class="main-novedades__section--ul--li first-novedades-li">
                     <a class="main-novedades__section--ul--li--a" href="#">
-                        <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto del carrito">
+                        <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/productos-grilla.webp" alt="Novedad foto 1">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Tu pedido del carrito ya esta listo!</h2>
-                            <p class="main-novedades__section--ul--li--a--div--desc">3 tarugos/b, 13 tornillos/c, 20 tornillos/e, tor...</p>
+                            <p class="main-novedades__section--ul--li--a--div--desc">10 tarugo 8 c/t, 12 T1 Aguja 8x1/2, hex...</p>
                         </div>
                     </a>
                     <div class="main-novedades__section--ul--li--x">
@@ -147,10 +152,10 @@
                 </li>
                 <li class="main-novedades__section--ul--li">
                     <a class="main-novedades__section--ul--li--a" href="#">
-                        <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto de producto nuevo">
+                        <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/toralas-10x2.webp" alt="Novedad foto 2">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Nuevo producto disponible!</h2>
-                            <p class="main-novedades__section--ul--li--a--div--desc">Nuevos tornillos marca T1 punta aguja para...</p>
+                            <p class="main-novedades__section--ul--li--a--div--desc">Nuevos tornillos Tor Alas 10x2 id...</p>
                         </div>
                     </a>
                     <div class="main-novedades__section--ul--li--x">
@@ -161,7 +166,7 @@
                 </li>
                 <li class="main-novedades__section--ul--li last-novedades-li">
                     <a class="main-novedades__section--ul--li--a" href="#">
-                        <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="Foto ofertas">
+                        <img class="main-novedades__section--ul--li--a--img" src="../../imagenes/oferta-exclusiva.webp" alt="Novedad foto 3">
                         <div class="main-novedades__section--ul--li--a--div">
                             <h2 class="main-novedades__section--ul--li--a--div--title">¡Ofertas exclusivas de verano!</h2>
                             <p class="main-novedades__section--ul--li--a--div--desc">Aprovecha el descuento en toda la linea T3, T4...</p>
