--- a/views/productos/productos.html
+++ b/views/productos/productos.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../../imagenes/g.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../../css/main.css">
+    <meta name="description" content="Amplia gama de tornillos autoperforantes, bulones, tuercas y demás elementos de construcción">
+    <meta name="author" content="Marco Leskovar">
+    <meta name="keywords" content="tornillos, bulones, autoperforantes, construcción"/>
+    <meta name="copyright" content="Gamma Distribuciones"/>
+    <meta name="robots" content="index, follow"/>
     <title>Productos - Gamma Distribuciones</title>
 </head>
 <body>
@@ -44,7 +49,7 @@
                     <a class="nav__log--login" href="#">
                         <button class="nav__log--login--button">
                             <img class="nav__log--login--button--img1" src="../../imagenes/profile-icon.png" alt="logo de usuario">
-                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario">
+                            <img class="nav__log--login--button--img1--2" src="../../imagenes/profile-icon-full.png" alt="logo de usuario 2">
                             <span class="nav__log--login--button--span1">Acceder</span>
                         </button>
                     </a>
@@ -141,10 +146,10 @@
                 <!-- PRODUCTO 1 = START -->
                 <li class="main-productos__section--ul--li first-product-li">
                     <a class="main-productos__section--ul--li--a" href="#">
-                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto de producto 1">
+                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t2-aguja-6x1.webp" alt="Producto 1">
                         <div class="main-productos__section--ul--li--a--div">
-                            <h2 class="main-productos__section--ul--li--a--div--product-name">Producto 1</h2>
-                            <h3 class="main-productos__section--ul--li--a--product-price">$10000 por caja</h3>
+                            <h2 class="main-productos__section--ul--li--a--div--product-name">T2 Aguja 6x1 - Granel</h2>
+                            <h3 class="main-productos__section--ul--li--a--product-price">$30.000</h3>
                         </div>
                     </a>
                 </li>
@@ -152,10 +157,10 @@
                 <!-- PRODUCTO 2 = START -->
                 <li class="main-productos__section--ul--li">
                     <a class="main-productos__section--ul--li--a" href="#">
-                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto de producto 1">
+                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t1-mecha-8x12.webp" alt="Producto 2">
                         <div class="main-productos__section--ul--li--a--div">
-                            <h2 class="main-productos__section--ul--li--a--div--product-name">Producto 2</h2>
-                            <h3 class="main-productos__section--ul--li--a--product-price">$10000 por caja</h3>
+                            <h2 class="main-productos__section--ul--li--a--div--product-name">T1 Mecha 8x1/2 (Zincado) - Granel</h2>
+                            <h3 class="main-productos__section--ul--li--a--product-price">$25.000</h3>
                         </div>
                     </a>
                 </li>
@@ -163,10 +168,10 @@
                 <!-- PRODUCTO 3 = START -->
                 <li class="main-productos__section--ul--li">
                     <a class="main-productos__section--ul--li--a" href="#">
-                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto de producto 1">
+                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/hex-t2-14x2.webp" alt="Producto 3">
                         <div class="main-productos__section--ul--li--a--div">
-                            <h2 class="main-productos__section--ul--li--a--div--product-name">Producto 3</h2>
-                            <h3 class="main-productos__section--ul--li--a--product-price">$10000 por caja</h3>
+                            <h2 class="main-productos__section--ul--li--a--div--product-name">Hex T2 14x2 - Granel</h2>
+                            <h3 class="main-productos__section--ul--li--a--product-price">$28.000</h3>
                         </div>
                     </a>
                 </li>
@@ -174,10 +179,10 @@
                 <!-- PRODUCTO 4 = START -->
                 <li class="main-productos__section--ul--li">
                     <a class="main-productos__section--ul--li--a" href="#">
-                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto de producto 1">
+                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/fix-5x45.webp" alt="Producto 4">
                         <div class="main-productos__section--ul--li--a--div">
-                            <h2 class="main-productos__section--ul--li--a--div--product-name">Producto 4</h2>
-                            <h3 class="main-productos__section--ul--li--a--product-price">$10000 por caja</h3>
+                            <h2 class="main-productos__section--ul--li--a--div--product-name">Fix 5x45 (Dorado) - Granel</h2>
+                            <h3 class="main-productos__section--ul--li--a--product-price">$29.000</h3>
                         </div>
                     </a>
                 </li>
@@ -185,10 +190,10 @@
                 <!-- PRODUCTO 5 = START -->
                 <li class="main-productos__section--ul--li">
                     <a class="main-productos__section--ul--li--a" href="#">
-                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto de producto 1">
+                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tarugo-8-ct.webp" alt="Producto 5">
                         <div class="main-productos__section--ul--li--a--div">
-                            <h2 class="main-productos__section--ul--li--a--div--product-name">Producto 5</h2>
-                            <h3 class="main-productos__section--ul--li--a--product-price">$10000 por caja</h3>
+                            <h2 class="main-productos__section--ul--li--a--div--product-name">Tarugo 8 c/t - Bolsa</h2>
+                            <h3 class="main-productos__section--ul--li--a--product-price">$13.000</h3>
                         </div>
                     </a>
                 </li>
@@ -196,10 +201,10 @@
                 <!-- PRODUCTO 6 = START -->
                 <li class="main-productos__section--ul--li last-product-li">
                     <a class="main-productos__section--ul--li--a" href="#">
-                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/tornillo.png" alt="foto de producto 1">
+                        <img class="main-productos__section--ul--li--a--img" src="../../imagenes/t1-aguja-8x916.webp" alt="Producto 6">
                         <div class="main-productos__section--ul--li--a--div">
-                            <h2 class="main-productos__section--ul--li--a--div--product-name">Producto 6</h2>
-                            <h3 class="main-productos__section--ul--li--a--product-price">$10000 por caja</h3>
+                            <h2 class="main-productos__section--ul--li--a--div--product-name">T1 Aguja 8x9/16 - Granel</h2>
+                            <h3 class="main-productos__section--ul--li--a--product-price">$32.000</h3>
                         </div>
                     </a>
                 </li>
